oppgradert teknisk (#6)
* oppgradert teknisk

* legger til webproxy true for at det skal kjøre i fss

* siste update
