# src/main/kotlin/no/nav/sokos/ereg/proxy/api/EregProxyApi.kt
@@ -1,107 +1,108 @@
 package no.nav.sokos.ereg.proxy.api
 
-import io.ktor.application.Application
-import io.ktor.application.call
+import kotlinx.serialization.Serializable
+
 import io.ktor.http.ContentType
 import io.ktor.http.HttpStatusCode
-import io.ktor.http.HttpStatusCode.Companion.OK
-import io.ktor.response.header
-import io.ktor.response.respond
-import io.ktor.response.respondText
-import io.ktor.routing.get
-import io.ktor.routing.route
-import io.ktor.routing.routing
-import io.ktor.util.getOrFail
-import io.prometheus.client.Summary
+import io.ktor.server.response.header
+import io.ktor.server.response.respond
+import io.ktor.server.response.respondText
+import io.ktor.server.routing.Route
+import io.ktor.server.routing.get
+import io.ktor.server.routing.route
+import io.ktor.server.util.getOrFail
+import mu.KotlinLogging
+
+import no.nav.sokos.ereg.proxy.ereg.EregClientService
 import no.nav.sokos.ereg.proxy.ereg.EregException
-import no.nav.sokos.ereg.proxy.ereg.EregService
 import no.nav.sokos.ereg.proxy.ereg.entities.Organisasjon
-import no.nav.sokos.ereg.proxy.metrics.Metrics
-import org.slf4j.LoggerFactory
 
-private val LOGGER = LoggerFactory.getLogger("no.nav.sokos.ereg.proxy.api.EregProxyApiKt")
+private val logger = KotlinLogging.logger {}
 
-fun Application.eregProxyApi(eregService: EregService) {
-    routing {
-        route("organisasjon-proxy/api") {
-            get("v1/organisasjon/{orgnr}") {
-                val organisasjonsnummer = call.parameters.getOrFail("orgnr")
-                val navCallId = call.request.headers["Nav-Call-Id"] ?: ""
-                val navConsumerId = call.request.headers["Nav-Consumer-Id"] ?: ""
+fun Route.eregProxyApi(eregClientService: EregClientService = EregClientService()) {
+    route("organisasjon-proxy/api") {
+        get("v1/organisasjon/{orgnr}") {
+            val organisasjonsnummer = call.parameters.getOrFail("orgnr")
+            val navCallId = call.request.headers["Nav-Call-Id"] ?: ""
+            val navConsumerId = call.request.headers["Nav-Consumer-Id"] ?: ""
 
-                call.response.header("Nav-Consumer-Id", navConsumerId)
+            call.response.header("Nav-Consumer-Id", navConsumerId)
 
-                try {
-                    val org: Organisasjon = Metrics.eregCallSummary.cotime {
-                        eregService.organisasjon(
-                            navCallId,
-                            navConsumerId,
-                            organisasjonsnummer
-                        )
-                    }
-                    Metrics.eregMappingSummary.cotime {
-                        call.respond(OK, OrganisasjonInfo(
-                            organisasjonsnummer = org.organisasjonsnummer,
-                            organisasjonstype = org.type,
-                            navn = Navn(
-                                navnelinje1 = org.navn.navnelinje1,
-                                navnelinje2 = org.navn.navnelinje2,
-                                navnelinje3 = org.navn.navnelinje3,
-                                navnelinje4 = org.navn.navnelinje4,
-                                navnelinje5 = org.navn.navnelinje5,
-                                redigertnavn = org.navn.redigertnavn
-                            ),
-                            forretningsadresse = org.forretningsadresse()?.let {
-                                Adresse(
-                                    adresselinje1 = it.adresselinje1,
-                                    adresselinje2 = it.adresselinje2,
-                                    adresselinje3 = it.adresselinje3,
-                                    kommunenummer = it.kommunenummer,
-                                    landkode = it.landkode,
-                                    postnummer = it.postnummer,
-                                    poststed = it.poststed
-                                )
-                            },
-                            postadresse = org.postadresse()?.let {
-                                Adresse(
-                                    adresselinje1 = it.adresselinje1,
-                                    adresselinje2 = it.adresselinje2,
-                                    adresselinje3 = it.adresselinje3,
-                                    kommunenummer = it.kommunenummer,
-                                    landkode = it.landkode,
-                                    postnummer = it.postnummer,
-                                    poststed = it.poststed
-                                )
-                            }
-                        ))
-                    }
-                } catch (e: EregException) {
-                    LOGGER.warn("Ereg returnerte ${e.errorCode} med melding ${e.message}")
-                    call.respondText(
-                        text = e.message,
-                        contentType = ContentType.Application.Json,
-                        status = e.errorCode
+            try {
+                val org =
+                    eregClientService.hentOrganisasjon(
+                        navCallId,
+                        navConsumerId,
+                        organisasjonsnummer,
                     )
-                }  catch (ex: Exception) {
-                    LOGGER.error("Det har oppstått en feil.", ex)
-                    Metrics.serviceFaultCounter.labels(ex::class.java.canonicalName).inc()
-                    call.respond(
-                        HttpStatusCode.InternalServerError,
-                        TjenestefeilResponse(
-                            "Det har oppstått en feil. Se log for feilmelding. (x-correlation-id: $navCallId)")
-                    )
-                }
+                val response = mapOrganisasjonToResponse(org)
+                call.respond(
+                    response,
+                )
+            } catch (e: EregException) {
+                logger.error("Ereg returnerte ${e.errorCode} med melding ${e.message}")
+                call.respondText(
+                    text = e.message,
+                    contentType = ContentType.Application.Json,
+                    status = e.errorCode,
+                )
+            } catch (ex: Exception) {
+                logger.error("Det har oppstått en feil.", ex)
+                call.respond(
+                    HttpStatusCode.InternalServerError,
+                    TjenestefeilResponse(
+                        "Det har oppstått en feil. Se log for feilmelding. (x-correlation-id: $navCallId)",
+                    ),
+                )
             }
         }
     }
 }
 
+fun mapOrganisasjonToResponse(organisasjon: Organisasjon): OrganisasjonInfoResponse =
+    OrganisasjonInfoResponse(
+        organisasjonsnummer = organisasjon.organisasjonsnummer,
+        organisasjonstype = organisasjon.type,
+        navn =
+            Navn(
+                navnelinje1 = organisasjon.navn.navnelinje1,
+                navnelinje2 = organisasjon.navn.navnelinje2,
+                navnelinje3 = organisasjon.navn.navnelinje3,
+                navnelinje4 = organisasjon.navn.navnelinje4,
+                navnelinje5 = organisasjon.navn.navnelinje5,
+                redigertnavn = organisasjon.navn.redigertnavn,
+            ),
+        forretningsadresse =
+            organisasjon.forretningsadresse()?.let {
+                Adresse(
+                    adresselinje1 = it.adresselinje1,
+                    adresselinje2 = it.adresselinje2,
+                    adresselinje3 = it.adresselinje3,
+                    kommunenummer = it.kommunenummer,
+                    landkode = it.landkode,
+                    postnummer = it.postnummer,
+                    poststed = it.poststed,
+                )
+            },
+        postadresse =
+            organisasjon.postadresse()?.let {
+                Adresse(
+                    adresselinje1 = it.adresselinje1,
+                    adresselinje2 = it.adresselinje2,
+                    adresselinje3 = it.adresselinje3,
+                    kommunenummer = it.kommunenummer,
+                    landkode = it.landkode,
+                    postnummer = it.postnummer,
+                    poststed = it.poststed,
+                )
+            },
+    )
+
 private fun Organisasjon.forretningsadresse() = organisasjonDetaljer?.forretningsadresser?.get(0)
+
 private fun Organisasjon.postadresse() = organisasjonDetaljer?.postadresser?.get(0)
 
-private inline fun <T> Summary.cotime(block: () -> T): T {
-    val timer = startTimer()
-    val result = block()
-    timer.observeDuration()
-    return result
-}
+@Serializable
+data class TjenestefeilResponse(
+    val melding: String,
+)
