# src/main/resources/openapi/ereg-proxy_v1_002.json
@@ -5,8 +5,9 @@
     "title": "Ereg Connect Proxy API",
     "description": "Proxy tjeneste som lar z/OS Connect kalle Ereg.",
     "contact": {
-      "name": "TØB",
-      "email": "okonomi@nav.no"
+      "name": "Team Motta og Beregne",
+      "email": "okonomi@nav.no",
+      "url": "https://nav-it.slack.com/archives/CKZADNFBP"
     }
   },
   "basePath": "/organisasjon-proxy/api",
@@ -25,7 +26,7 @@
           "organisasjon-proxy.v1"
         ],
         "summary": "Kaller Ereg organisasjon og mapper om til OrganisasjonInfo.",
-        "operationId": "organisasjon",
+        "operationId": "hentOrganisasjon",
         "consumes": [
           "application/json"
         ],
@@ -36,7 +37,7 @@
           {
             "name": "orgnr",
             "in": "path",
-            "description": "Organisasjonsnummer som skal s&oslash;kes opp i Ereg. Bruk 990983666 for test.",
+            "description": "Organisasjonsnummer som skal søkes opp i Ereg. Bruk 990983666 for test.",
             "required": true,
             "type": "string"
           },
@@ -63,7 +64,7 @@
             }
           },
           "400": {
-            "description": "Ugyldig(e) parameter(e) i foresp&oslash;rsel",
+            "description": "Ugyldig(e) parameter(e) i forespørsel",
             "schema": {
               "$ref": "#/definitions/TjenestefeilResponse"
             }
